--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/camera": "^5.0.0",
     "@capacitor/cli": "^5.0.0",
     "@capacitor/core": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
