--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/cli": "^5.7.8",
     "@capacitor/core": "^5.7.8",
     "@capacitor/ios": "^5.7.8",
+    "antd": "^5.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
